--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,14 +106,14 @@ nav ul li a:hover {
 /* Project card styling */
 .project-card {
   width: 370px;
-  height: auto; /* 카드 높이를 콘텐츠에 따라 자동 조정 */
+  height: 500px;
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* 위아래 요소 간격 분배 */
+  justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
 }
@@ -121,9 +121,8 @@ nav ul li a:hover {
 /* Image styling */
 .project-image {
   width: 100%;
-  height: auto; /* 이미지 비율 유지 */
+  height: 70%;
   border-radius: 8px;
-  margin-bottom: 20px; /* 이미지와 버튼 사이 간격 */
 }
 
 /* Title styling */
@@ -131,7 +130,7 @@ nav ul li a:hover {
   font-size: 25px;
   font-weight: bold;
   color: #333;
-  margin: 10px 0;
+  margin-top: 10px;
 }
 
 /* Description styling */
@@ -139,7 +138,8 @@ nav ul li a:hover {
   font-size: 16px;
   color: #666;
   text-align: center;
-  margin: 20px 0; /* 설명 텍스트 간격 */
+  margin-top: 40px;
+  margin-bottom: auto;
 }
 
 /* Button styling */
@@ -151,14 +151,9 @@ nav ul li a:hover {
   border-radius: 5px;
   font-size: 14px;
   cursor: pointer;
-  margin-top: 10px; /* 버튼 위에 간격 추가 */
-  align-self: center; /* 버튼을 중앙 정렬 */
+  margin-top: 190px;
+  align-self: center;
 }
-
-.github-button:hover {
-  background-color: #444; /* 버튼 hover 효과 */
-}
-
 
 /* Resume Section */
 .resume {
