--- a/client/src/App.css
+++ b/client/src/App.css
@@ -101,6 +101,7 @@ nav ul li a:hover {
   gap: 20px;
   justify-content: center;
   padding-bottom: 100px;
+  align-items: flex-start; /* 카드 내부 요소의 상단 정렬 */
 }
 
 /* Project card styling */
@@ -113,9 +114,9 @@ nav ul li a:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; /* 요소 정렬 수정 */
   align-items: center;
   box-sizing: border-box;
+  justify-content: space-between;
   position: relative; /* 위치 설정 */
 }
 
@@ -153,10 +154,11 @@ nav ul li a:hover {
   font-size: 14px;
   cursor: pointer;
   position: absolute; /* 위치를 고정 */
-  bottom: 20px; /* 컨테이너 하단에서 간격 */
+  bottom: 13% !important; /* 컨테이너 하단에서 간격 */
   left: 50%; /* 컨테이너 가운데 정렬 */
   transform: translateX(-50%); /* 가운데 정렬 유지 */
   height: 40px;
+  margin-top: auto; /* 하단으로 밀기 */
 }
 
 
@@ -248,7 +250,8 @@ footer {
   margin-top: 50px; /* 위의 콘텐츠와 간격 추가 */
   bottom: 0; /* 화면 하단에 고정 */
   left: 0; /* 화면 왼쪽에 고정 */
-  position: fixed; /* 콘텐츠 길이에 따라 자연스럽게 맨 아래로 이동 */
+  position: relative; /* 콘텐츠 길이에 따라 자연스럽게 맨 아래로 이동 */
+
 }
 
 .main-content {
