--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -1,4 +1,5 @@
-@import "tailwindcss";
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @keyframes progress { from { width: 0 } to { width: 100% } }
